src/css/header.css
.header {
  z-index: 1999;
}

.menu {
  display: none;
}

.mobile-header {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 20px;
  margin-bottom: 0px;
  padding: 0px 20px;
  gap: 137px;
  position: fixed;
}

.menu-icon {
  width: 32px;
  height: 32px;
}

.menu-button {
  background: none;
  border: none;
  outline: none;
}

.nav-list {
  display: flex;
  flex-direction: column;
  gap: 48px;
}

.nav-button-wrapper {
  margin-top: 308px;
  display: flex;
  flex-direction: column;
  gap: 244px;
  justify-content: center;
  align-items: center;
}

.nav-wrapper {
  background-color: var(--green);
  position: fixed;
  inset: 0;
  z-index: 2000;
}

.nav-link-box-model-how,
.nav-link-box-model-vege,
.nav-link-box-model-review {
  border: 1px solid var(--white);
  border-radius: 12px;

  color: var(--white);
}

.nav-link-box-model-how {
  padding: 12px 17px;
}

.nav-link-box-model-vege {
  padding: 12px 23px;
}

.nav-link-box-model-review {
  padding: 12px 32px;
}

.nav-link-box-model-how:hover,
.nav-link-box-model-vege:hover,
.nav-link-box-model-review:hover {
  background-color: var(--white);
  color: var(--chianti);
}

.header-button:hover {
  background-color: var(--white);
  color: var(--chianti);
}

.nav-container {
  position: relative;
}

.menu-icon-close {
  position: absolute;
  top: 20px;
  right: 20px;
  width: 40px;
  height: 40px;
}

.is-open-menu {
  position: fixed;
  inset: 0;

  display: flex;
  align-items: center;
  justify-content: center;
  z-index: 2000;
}

@media (min-width: 768px) {
  .header-logo {
    width: 216px;
  }

  .nav-container {
    display: flex;
    justify-content: flex-end;
  }

  .menu-icon {
    width: 40px;
    height: 40px;
  }

  .is-open-menu {
    background-color: rgba(20, 20, 20, 0.4);
  }

  .nav-wrapper {
    width: 351px;
    inset: 0 0 0 auto;
  }

  .mobile-header {
    margin-top: 32px;
    margin-bottom: 0px;
    padding: 0px 32px;
    gap: 448px;
  }

  .nav-link-box-model-how {
    padding: 12px 14px;
  }

  .nav-link-box-model-vege {
    padding: 12px 21px;
  }

  .menu-icon-close {
    top: 32px;
    right: 32px;
    width: 40px;
  }
}

@media (min-width: 1280px) {
  .menu-button,
  .menu-icon-close {
    display: none;
  }

  .menu {
    display: flex;
  }

  .mobile-header {
    display: unset;
    justify-content: unset;
    align-items: unset;
    margin: 0px;
    position: unset;
    padding: 0px;
  }

  .nav-list {
    flex-direction: row;
    gap: 20px;
  }

  .nav-button-wrapper {
    margin: 0px;

    flex-direction: row;
    gap: 20px;
  }

  .nav-wrapper {
    background-color: unset;
    position: unset;
    inset: unset;
    z-index: unset;
    width: unset;
    height: 52px;
  }

  .nav-link-box-model-vege,
  .nav-link-box-model-review,
  .nav-link-box-model-how {
    padding: 12px 12px;
  }

  .desktop-header {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    gap: 322px;
    margin-top: 32px;
    margin-bottom: 0px;
    padding: 0 100px;
    position: fixed;
  }
}

